# res

./: .gitmodules  Makefile  Makefile.am  buildrules.make  code.html  collection.html  collections.html  common.make  developers.html  education.html  faq.html  guides.html  index.html  local.css  products.html  tech.html  tools.html
advent/: README.md  data.json  index.html
advent/css/: advent.css
advent/js/: advent.js  snowflake.js  snowstorm.js  social.js
js/: modernizr.js
templates/: Makefile.am  code.phtml  collection.phtml  collections.phtml  developers.phtml  education.phtml  faq.phtml  footer.php  generate.php  guides.phtml  header.php  index.phtml  products.phtml  secondarynav.php  tech.phtml  tools.phtml  video.php
tools/: generate.php
